--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,7 +33,7 @@ jobs:
           docker tag pyiron/pyiron:latest pyiron/pyiron:"$(date +%F)"
       # pyiron/potentialworkshop
       - run: | 
-          cat base/apt.txt >> md/apt.txt
+          cat base/apt.txt >> potentialworkshop/apt.txt
           tail --lines=+4 base/environment.yml >> potentialworkshop/environment.yml
           tail --lines=+4 md/environment.yml >> potentialworkshop/environment.yml
           tail --lines=+4 pyiron/environment.yml >> potentialworkshop/environment.yml
@@ -41,13 +41,13 @@ jobs:
           docker tag pyiron/potentialworkshop:latest pyiron/potentialworkshop:"$(date +%F)"
       # pyiron/experimental
       - run: |
-          cat base/apt.txt >> md/apt.txt
+          cat base/apt.txt >> experimental/apt.txt
           tail --lines=+4 base/environment.yml >> experimental/environment.yml
           docker build -t pyiron/experimental:latest experimental/
           docker tag pyiron/experimental:latest pyiron/experimental:"$(date +%F)"
       # pyiron/mpie_cmti
       - run: |
-          cat base/apt.txt >> md/apt.txt
+          cat base/apt.txt >> potentialworkshop/apt.txt
           tail --lines=+4 base/environment.yml >> potentialworkshop/environment.yml
           tail --lines=+4 md/environment.yml >> potentialworkshop/environment.yml
           tail --lines=+4 pyiron/environment.yml >> potentialworkshop/environment.yml
