--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,9 +48,9 @@ jobs:
       # pyiron/mpie_cmti
       - run: |
           cat base/apt.txt >> mpie_cmti/apt.txt
-          tail --lines=+4 base/environment.yml >> potentialworkshop/environment.yml
-          tail --lines=+4 md/environment.yml >> potentialworkshop/environment.yml
-          tail --lines=+4 pyiron/environment.yml >> potentialworkshop/environment.yml
+          tail --lines=+4 base/environment.yml >> mpie_cmti/environment.yml
+          tail --lines=+4 md/environment.yml >> mpie_cmti/environment.yml
+          tail --lines=+4 pyiron/environment.yml >> mpie_cmti/environment.yml
           docker build -t pyiron/mpie_cmti:latest mpie_cmti/
           docker tag pyiron/mpie_cmti:latest pyiron/mpie_cmti:"$(date +%F)"
       # Testing
