--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -53,9 +53,9 @@ jobs:
           docker tag pyiron/experimental:latest pyiron/experimental:"$(date +%F)"
       # pyiron/mpie_cmti
       - run: |
-          tail --lines=+4 base/environment.yml >> potentialworkshop/environment.yml
-          tail --lines=+4 md/environment.yml >> potentialworkshop/environment.yml
-          tail --lines=+4 pyiron/environment.yml >> potentialworkshop/environment.yml
+          tail --lines=+4 base/environment.yml >> mpie_cmti/environment.yml
+          tail --lines=+4 md/environment.yml >> mpie_cmti/environment.yml
+          tail --lines=+4 pyiron/environment.yml >> mpie_cmti/environment.yml
           docker build -t pyiron/mpie_cmti:latest mpie_cmti/
           docker tag pyiron/mpie_cmti:latest pyiron/mpie_cmti:"$(date +%F)"
       # Publish
