--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,39 +20,39 @@ jobs:
           message: ""
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-      # pyiron/base
-      - run: |
+      - name: Build pyiron/base
+        run: |
           docker build -t pyiron/base:latest base/
           docker tag pyiron/base:latest pyiron/base:"$(date +%F)"
-      # pyiron/md
-      - run: |
+      - name: Build pyiron/md
+        run: |
           tail --lines=+4 base/environment.yml >> md/environment.yml
           docker build -t pyiron/md:latest md/
           docker tag pyiron/md:latest pyiron/md:"$(date +%F)"
-      # pyiron/continuum
-      - run: |
+      - name: Build pyiron/continuum
+        run: |
           docker build -t pyiron/continuum:latest continuum/
           docker tag pyiron/continuum:latest pyiron/continuum:"$(date +%F)"
-      # pyiron/pyiron
-      - run: |
+      - name: Build pyiron/pyiron
+        run: |
           tail --lines=+4 base/environment.yml >> pyiron/environment.yml
           tail --lines=+4 md/environment.yml >> pyiron/environment.yml
           docker build -t pyiron/pyiron:latest pyiron/
           docker tag pyiron/pyiron:latest pyiron/pyiron:"$(date +%F)"
-      # pyiron/potentialworkshop
-      - run: | 
+      - name: Build pyiron/potentialworkshop
+        run: | 
           tail --lines=+4 base/environment.yml >> potentialworkshop/environment.yml
           tail --lines=+4 md/environment.yml >> potentialworkshop/environment.yml
           tail --lines=+4 pyiron/environment.yml >> potentialworkshop/environment.yml
           docker build -t pyiron/potentialworkshop:latest potentialworkshop/
           docker tag pyiron/potentialworkshop:latest pyiron/potentialworkshop:"$(date +%F)"
-      # pyiron/experimental
-      - run: |
+      - name: Build pyiron/experimental
+        run: |
           tail --lines=+4 base/environment.yml >> experimental/environment.yml
           docker build -t pyiron/experimental:latest experimental/
           docker tag pyiron/experimental:latest pyiron/experimental:"$(date +%F)"
-      # pyiron/mpie_cmti
-      - run: |
+      - name: Build pyiron/mpie_cmti
+        run: |
           tail --lines=+4 base/environment.yml >> mpie_cmti/environment.yml
           tail --lines=+4 md/environment.yml >> mpie_cmti/environment.yml
           tail --lines=+4 pyiron/environment.yml >> mpie_cmti/environment.yml
