--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,45 +9,39 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # pyiron/base
-      - run: |
+      - name: Build pyiron/base
+        run: |
           docker build -t pyiron/base:latest base/
           docker tag pyiron/base:latest pyiron/base:"$(date +%F)"
-      # pyiron/md
-      - run: |
-          cat base/apt.txt >> md/apt.txt
+      - name: Build pyiron/md
+        run: |
           tail --lines=+4 base/environment.yml >> md/environment.yml
           docker build -t pyiron/md:latest md/
           docker tag pyiron/md:latest pyiron/md:"$(date +%F)"
-      # pyiron/continuum
-      - run: |
-          cat base/apt.txt >> continuum/apt.txt
+      - name: Build pyiron/continuum
+        run: |
           docker build -t pyiron/continuum:latest continuum/
           docker tag pyiron/continuum:latest pyiron/continuum:"$(date +%F)"
-      # pyiron/pyiron
-      - run: |
-          cat base/apt.txt >> md/apt.txt
+      - name: Build pyiron/pyiron
+        run: |
           tail --lines=+4 base/environment.yml >> pyiron/environment.yml
           tail --lines=+4 md/environment.yml >> pyiron/environment.yml
           docker build -t pyiron/pyiron:latest pyiron/
           docker tag pyiron/pyiron:latest pyiron/pyiron:"$(date +%F)"
-      # pyiron/potentialworkshop
-      - run: | 
-          cat base/apt.txt >> md/apt.txt
+      - name: Build pyiron/potentialworkshop
+        run: | 
           tail --lines=+4 base/environment.yml >> potentialworkshop/environment.yml
           tail --lines=+4 md/environment.yml >> potentialworkshop/environment.yml
           tail --lines=+4 pyiron/environment.yml >> potentialworkshop/environment.yml
           docker build -t pyiron/potentialworkshop:latest potentialworkshop/
           docker tag pyiron/potentialworkshop:latest pyiron/potentialworkshop:"$(date +%F)"
-      # pyiron/experimental
-      - run: |
-          cat base/apt.txt >> md/apt.txt
+      - name: Build pyiron/experimental
+        run: |
           tail --lines=+4 base/environment.yml >> experimental/environment.yml
           docker build -t pyiron/experimental:latest experimental/
           docker tag pyiron/experimental:latest pyiron/experimental:"$(date +%F)"
-      # pyiron/mpie_cmti
-      - run: |
-          cat base/apt.txt >> md/apt.txt
+      - name: Build pyiron/mpie_cmti
+        run: |
           tail --lines=+4 base/environment.yml >> mpie_cmti/environment.yml
           tail --lines=+4 md/environment.yml >> mpie_cmti/environment.yml
           tail --lines=+4 pyiron/environment.yml >> mpie_cmti/environment.yml
