--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -1,26 +1,26 @@
 channels:
 - conda-forge
 dependencies:
-- atomicrex =1.0.4
-- calphy =1.3.10
-- fitsnap3 =3.1.0.2
-- nbgitpuller =1.2.1
-- pyiron_contrib =0.1.17
-- pyiron_potentialfit =0.3.4
-- pyiron_workflow =0.9.4
-- pyiron_gui =0.0.12
-- matgl =1.1.2
-- mlip =2.0
-- sqsgenerator =0.3
-- pyiron_gpl =0.0.5
-- python-ace =0.3.0
-- pytorch =2.0.0
-- pyxtal =0.6.7
-- runner =1.3
-- structdbrest =0.0.1
-- tensorflow =2.15.0
-- psycopg2 =2.9.9
-- numba =0.60.0
-- llama-index =0.10.59
-- jupyter-server-proxy =4.3.0
-- flux-core =0.64.0
+- atomicrex
+- calphy
+- fitsnap3
+- nbgitpuller
+- pyiron_contrib
+- pyiron_potentialfit
+- pyiron_workflow
+- pyiron_gui
+- matgl
+- mlip
+- sqsgenerator
+- pyiron_gpl
+- python-ace
+- pytorch
+- pyxtal
+- runner
+- structdbrest
+- tensorflow
+- psycopg2
+- numba
+- llama-index
+- jupyter-server-proxy
+- flux-core
