--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pyiron_workflow==0.9.4
 pyiron-gpl==0.0.5
 pyiron_potentialfit==0.3.4
 calphy==1.3.10
-damask==3.0.0a8
+damask==3.0.0
 fenics==2019.1.0
 gpaw==24.6.0
 hyperspy==2.1.1
